# thingymcconfig-exampleapp

./: .gitignore  Makefile  meson.build  thingymcconfig-app.c
